# Companest

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
companest/: __init__.py  __main__.py  admin.py  app.py  archiver.py  background.py  canary.py  cascade.py  ceo_engine.py  cli.py  client.py  company.py  component.py  config.py  cost_gate.py  events.py  evolution.py  exceptions.py  feeds.py  git_tools.py  jobs.py  litellm_client.py  master.py  model_routing.py  multi_team.py  orchestrator.py  output.py  parser.py  pi.py  router.py  scheduler.py  server.py  team.py  templates.py  tools.py  user_scheduler.py  utils.py  watcher.py  workspace.py
companest/digests/: __init__.py  ingest.py  models.py  router.py  s3_store.py
companest/memory/: __init__.py  backend.py  dreamer.py  manager.py  qdrant_backend.py  s3_sync.py  search.py  viking_backend.py
companest/modes/: __init__.py  collaborative.py  conditional.py  council.py  default.py  loop.py
companest/public_knowledge/: __init__.py  index_store.py  mcp.py  models.py  publisher.py  router.py  search.py  (+1 more)
console/: index.html  package-lock.json  package.json  vite.config.ts
contracts/: contracts_version.yaml  public_knowledge_doc.schema.json
deploy/: .env.example  Dockerfile  bindings.example.json  config.prod.md  docker-compose.yml
docs/: god-view-frontend-plan.md  release-notes-platform-readiness.md
examples/: README.md  company-onboarding.md
infra/: companest-ctl.sh  main.tf  outputs.tf  terraform.tfvars.example  user-data.sh  variables.tf
scripts/: channel.py  master_gateway.py  smoke_test.py  test_info_collection_e2e.py
tests/: conftest.py  test_canary.py  test_cascade.py  test_cli.py  test_coding.py  test_collaborative.py  test_company_api.py  test_component.py  test_conditional.py  test_council.py  test_default_model_consistency.py  test_design.py  test_digests.py  test_dreamer.py  test_events.py  test_evolution.py  test_feeds.py  test_info_collection.py  test_master.py  test_memory_backend_safety.py  test_memory_cache.py  test_model_routing.py  test_modes.py  test_multi_team.py  test_public_knowledge.py  test_sessions_security.py  test_team_mode.py  test_utils.py
(+51 files in other folders)
